# gs-osg

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glinfo.vcxproj  glinfo.vcxproj.filters  osgGaussianPlugin.sln  osgdb_gaussian.vcxproj  osgdb_gply.vcxproj  osgdb_ply.vcxproj  osgdb_ply.vcxproj.filters
.github/: dependabot.yml
.github/workflows/: auto-pr.yml  bot-auto-pr.yml
Release/: osgdb_gply.lib
examples/: gaussian_viewer.cpp
glinfo.dir/Release/: glinfo.exe.recipe
glinfo.dir/Release/glinfo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: GaussianNode.h  GaussianPLYReader.h  GaussianPoint.h  Octree.h  ReaderWriterGaussian.h
osgdb_gaussian.dir/Release/: osgdb_gaussian.dll.recipe
osgdb_gaussian.dir/Release/osgdb_gaussian.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
osgdb_gply.dir/Release/: osgdb_gply.dll.recipe
osgdb_gply.dir/Release/osgdb_gply.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: GaussianNode.cpp  GaussianPLYReader.cpp  Octree.cpp  ReaderWriterGaussian.cpp  Shaders.inl  glinfo.cpp
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
